# winfree

./: Cargo.toml  Dioxus.toml  tailwind.config.js  tray.rc
.cargo/: config.toml
assets/: tailwind.css
src/: api.rs  main.rs  style.css
