[package]
name = "winfree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
tokio = { version = "1.32.0", features = ["full"] }
winapi = { version = "0.3.9", features = ["winuser", "psapi"] }
# windows = { version = "0.51.1", features = [ "Win32_Foundation", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_UI_WindowsAndMessaging"] }

# [build-dependencies]
# slint-build = "1.2.1"

[build]
rustflags = ["-C", "target-cpu=native", "-C", "link-arg=-fuse-ld=lld"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
strip = "symbols"
