[package]
name = "winfree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
image = "0.24.7"
padlock = "0.2.0"
platform-dirs = "0.3.0"
rust-embed = "8.0.0"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tray-item = { version = "0.9.0" }
# winapi = { version = "0.3.9", features = [
# 	"psapi",
# 	"shellapi",
# 	"wincon",
# 	"winuser",
# ] }
windows = { version = "0.51.1", features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	# "Win32_System_Console",
	"Win32_System_LibraryLoader",
	"Win32_System_ProcessStatus",
	"Win32_System_Registry",
	"Win32_System_SystemServices",
	"Win32_System_Threading",
	"Win32_UI_Shell",
	"Win32_UI_WindowsAndMessaging",
] }
winreg = "0.51.0"

[build-dependencies]
# slint-build = "1.2.1"
windres = "0.2.2"

# [build]
# rustflags = ["-C", "target-cpu=native", "-C", "link-arg=-fuse-ld=lld"]

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "z"
panic = "abort"
strip = true
